ECF version with slideshow

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 	
 
 	<!--BANNIERE-->
-	<div class="banniere">
-		<img src="/Applications/MAMP/htdocs/Studi/banniere-zoo.jpeg" alt="banniere" class="img-banniere">
+	<div class="slideshow">
+		<img src="/Users/enzo/Desktop/ECF-enzo/Bannière/ban4.jpg" alt="banniere" class="img-banniere">
+		<img src="/Users/enzo/Desktop/ECF-enzo/Bannière/ban1.jpg" alt="image d'un Hérons">
+		<img src="/Users/enzo/Desktop/ECF-enzo/Bannière/ban2.jpg" alt="image">
+		<img src="/Users/enzo/Desktop/ECF-enzo/Bannière/ban3.jpg" alt="Flamant rose">
 	</div>
 
 
